Voxel remesh modifier ArithmeticError #77878

Closed
opened 2020-06-15 11:50:26 +02:00 by Henrik D. · 6 comments
Member

System Information
Operating system: Linux (debian bullseye)
Graphics card: Nvidia Geforce GTX 1070

Blender Version
Broken: 2.90 alpha, fd14d1cceb, master, 2020-06-12
Worked: never (tested also 2.83 official build)

Short description of error
If the voxel size of the voxel remesh modifier is at 0.00001, blender will crash with the error message (in terminal)

terminate called after throwing an instance of 'openvdb::v7_0::ArithmeticError'
  what():  ArithmeticError: Non-zero scale values required

Exact steps for others to reproduce the error
Based on default startup

  1. Go into edit mode of the default cube and scale it down by 0.0001
  2. Exit editmode and add a voxel remesh modifier
  3. Set the voxel size to 0.00002 (it should give the corresponding result)
  4. Set the voxelsize to 0.00001 (crash, see console for error message)
**System Information** Operating system: Linux (debian bullseye) Graphics card: Nvidia Geforce GTX 1070 **Blender Version** Broken: 2.90 alpha, fd14d1ccebd4, master, 2020-06-12 Worked: never (tested also 2.83 official build) **Short description of error** If the voxel size of the voxel remesh modifier is at 0.00001, blender will crash with the error message (in terminal) ``` terminate called after throwing an instance of 'openvdb::v7_0::ArithmeticError' what(): ArithmeticError: Non-zero scale values required ``` **Exact steps for others to reproduce the error** Based on default startup 1. Go into edit mode of the default cube and scale it down by 0.0001 2. Exit editmode and add a voxel remesh modifier 3. Set the voxel size to 0.00002 (it should give the corresponding result) 4. Set the voxelsize to 0.00001 (crash, see console for error message)
Author
Member

Added subscriber: @HDMaster84

Added subscriber: @HDMaster84

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by fd0d8c710b

This issue was referenced by fd0d8c710b50b7e409a59b51bc75fef4838ae556

Added subscriber: @rjg

Added subscriber: @rjg

The issue is very similar to #72747 that was affecting the voxel remesher. Adding a higher hard_min limit should solve the issue in this case as well.

The issue is very similar to #72747 that was affecting the voxel remesher. Adding a higher `hard_min` limit should solve the issue in this case as well.

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Robert Guetzkow self-assigned this 2020-06-25 18:48:32 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77878
No description provided.